<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_third_mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentSecondStepAddress">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/vertical_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/fragment_step_second_text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/hint_please_add_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragment_step_second_text_typeHome_hint"
            style="@style/TextSummaryLabel"
            android:text="@string/hint_type_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_text_info" />

        <Spinner
            android:id="@+id/fragment_step_second_typeHome_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:entries="@array/property_type"
            android:nextFocusDown="@+id/houseNo"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_step_second_text_typeHome_hint"
            app:layout_constraintStart_toStartOf="@+id/vertical_middle"
            app:layout_constraintTop_toTopOf="@+id/fragment_step_second_text_typeHome_hint" />

        <TextView
            android:id="@+id/fragment_step_second_text_grass_hint"
            style="@style/TextSummaryLabel"
            android:text="@string/hint_grass_overgrown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_text_typeHome_hint" />

        <Switch
            android:id="@+id/fragment_step_second_grass_toggleButton"
            app:theme="@style/custom_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_step_second_text_grass_hint"
            app:layout_constraintStart_toStartOf="@+id/vertical_middle"
            app:layout_constraintTop_toTopOf="@+id/fragment_step_second_text_grass_hint" />

        <TextView
            android:id="@+id/fragment_step_second_text_windows_hint"
            style="@style/TextSummaryLabel"
            android:text="@string/hint_windows_boarded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_text_grass_hint" />

        <Switch
            android:id="@+id/fragment_step_second_windows_toggleButton"
            app:theme="@style/custom_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_step_second_text_windows_hint"
            app:layout_constraintStart_toStartOf="@+id/vertical_middle"
            app:layout_constraintTop_toTopOf="@+id/fragment_step_second_text_windows_hint" />

        <Switch
            android:id="@+id/fragment_step_second_activity_toggleButton"
            app:theme="@style/custom_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_step_second_text_activity_hint"
            app:layout_constraintStart_toStartOf="@+id/vertical_middle"
            app:layout_constraintTop_toTopOf="@+id/fragment_step_second_text_activity_hint" />

        <TextView
            android:id="@+id/fragment_step_second_text_activity_hint"
            style="@style/TextSummaryLabel"
            android:text="@string/hint_visible_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_text_windows_hint" />

        <TextView
            android:id="@+id/fragment_step_second_text_location_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/hint_select_location_from_gps_or_map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_text_activity_hint" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fragment_step_second_location_gps_button"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/btn_gps"
            style="@style/custom_button"
            app:layout_constraintEnd_toStartOf="@+id/vertical_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_text_location_hint" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/fragment_step_second_location_map_button"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/btn_map"
            style="@style/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vertical_middle"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_text_location_hint" />

        <EditText
            android:id="@+id/fragment_step_second_comments_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@style/TextMedium"
            android:padding="@dimen/activity_vertical_margin"
            android:hint="@string/hint_add_some_comments"
            android:background="@drawable/rectangle_shape_green"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_step_second_location_gps_button" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>